update-add->ListRoute

--- a/app/globals.css
+++ b/app/globals.css
@@ -71,7 +71,7 @@
   }
 
   .bottombar_link {
-    @apply relative flex flex-col items-center gap-2 rounded-lg p-2 sm:flex-1 sm:px-2 sm:py-2.5;
+    @apply relative overflow-x-auto flex flex-col items-center gap-2 rounded-lg p-2 sm:flex-1 sm:px-2 sm:py-2.5;
   }
 
   .leftsidebar {
