update:Add->SearchBar&SearchPage

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,11 +51,11 @@
     }
 
     .searchbar {
-        @apply flex gap-1 rounded-lg bg-dark-3 px-4 py-2;
+        @apply flex gap-1 rounded-full bg-dark-3 px-4 py-2 border-2 border-gray-700;
     }
 
     .searchbar_input {
-        @apply border-none bg-dark-3 text-base-regular text-light-4 outline-none !important;
+        @apply border-none bg-dark-3 text-base-regular text-white outline-none !important;
     }
 
     .topbar {
