--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* ::-webkit-scrollbar {
+    width: 3px;
+    height: 50%;
+    background-color: #000;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: #877EFF;
+    border-radius: 8px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+
+::-webkit-scrollbar-thumb:active {
+    background-color: #333;
+} */
+
 @layer components {
     /* main */
     .main-container {
