--- a/app/globals.css
+++ b/app/globals.css
@@ -8,19 +8,23 @@
 /* Define the styles for the scrollbar */
 ::-webkit-scrollbar {
     width: 8px;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-track {
     background-color: #09090a;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #697C89;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #09090d;
+    background-color: #617C79;
+    cursor: pointer;
 }
 
 @layer components {
