update:Add->FixActiviTypage

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
 
     /* Activity */
     .activity-card {
-        @apply flex items-center gap-2 rounded-md bg-dark-2 px-7 py-4;
+        @apply flex items-center gap-2 rounded-lg bg-dark-2 px-7 py-4 border-[1px] border-gray-700;
     }
 
     /* No Result */
